[package]
name = "ai-firewall"
version = "0.1.0"
edition = "2024"
description = "A blazing-fast, local-first proxy and CLI wrapper to prevent autonomous AI agents from leaking company secrets."
license = "MIT"
repository = "https://github.com/jsmestad/ai-firewall"
readme = "README.md"
categories = ["command-line-utilities", "network-programming"]
keywords = ["ai", "proxy", "security", "dlp"]

[dependencies]
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["full"] }
hyper-rustls = { version = "0.27.9", features = ["rustls-native-certs"] }
hyper-util = { version = "0.1.20", features = ["full"] }
notify-rust = { version = "4.17.0", default-features = false }
rcgen = "0.14.8"
regex = "1.12.3"
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.18", features = ["compat"] }
toml = "1.1.2"
